[metadata]
name = llch_logger
description = Código de llch Logger
url = https://github.com/luc-ch/llch-logger
author = Luciano Chamorro
author_email = lchamorro@fi.uba.ar
maintainer = Luciano Chamorro
maintainer_email = lchamorro@fi.uba.ar
version = file: project.version
long_description = file: README.md

[options]
package_dir = 
    = src
packages = find:
install_requires =
    importlib_resources>=5.1.4
    importlib_metadata>=4.5.0
    python-json-logger>=2.0.2
python_requires = >=3.7
include_package_data = True

[options.packages.find]
where = src

[options.package_data]
* = defaults/*

[aliases]
test=pytest

[flake8]
max-line-length=120

[tool:pytest]
testpaths=./tests
cache_dir=./build/tests/.pytest_cache
junit_family=xunit2
addopts = -ra
          --strict-markers
          --exitfirst
          --doctest-modules
          --capture=no
          --junitxml=tests-report.xml
          --cov=llch_logger
          --cov-report=xml:coverage-report.xml
          --cov-report=term-missing
